// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Book renders author input disabled when clearAuthor is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      disabled=""
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearAuthor"
          name="clearAuthor"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAuthor"
          title=""
        >
          Clear author
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Book renders author input enabled when clearAuthor is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="author"
    >
      Author
    </label>
    <input
      class="form-control"
      id="author"
      name="author"
      placeholder="Kurt Vonnagut"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearAuthor"
          name="clearAuthor"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAuthor"
          title=""
        >
          Clear author
        </label>
      </div>
    </div>
  </div>
</div>
`;
